--- a/AustinPortfolio/package.json
+++ b/AustinPortfolio/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^6.0.2",
+    "@tailwindcss/postcss": "^4.0.11",
     "@tailwindcss/vite": "^4.0.11",
+    "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.11"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
